# duckcomfy_personal_nodes

./: MANIFEST.in  README.md  __init__.py  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build-pipeline.yml  publish.yml
src/duckcomfy_personal_nodes/: attention_couple.py  nodes.py  query_tokenized_chunks.py
tests/: __init__.py  test_duckcomfy_personal_nodes.py
web/js/: clipChunkManager.js
